--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@mui/joy": "^5.0.0-beta.25",
     "@mui/material": "^5.15.7",
     "react": "^17.0.0 || ^18.0.0",
-    "react-dom": "^17.0.0 || ^18.0.0"
+    "react-charts": "^3.0.0-beta.57",
+    "react-dom": "^17.0.0 || ^18.0.0",
+    "react-resizable": "^3.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
