--- a/package.json
+++ b/package.json
@@ -20,10 +20,15 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/joy": "^5.0.0-beta.25",
     "@mui/material": "^5.15.7",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.3",
     "react": "^17.0.0 || ^18.0.0",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^17.0.0 || ^18.0.0",
-    "react-resizable": "^3.0.5"
+    "react-resizable": "^3.0.5",
+    "react-router-dom": "^6.22.0",
+    "recharts": "^2.11.0",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
