--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/joy": "^5.0.0-beta.25",
     "@mui/material": "^5.15.7",
+    "html-react-parser": "^5.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
     "react": "^17.0.0 || ^18.0.0",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-markdown": "^9.0.1",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.22.0",
     "recharts": "^2.11.0",
+    "rehype-raw": "^7.0.0",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
