--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.0 || ^18.0.0",
     "react-charts": "^3.0.0-beta.57",
     "react-dom": "^17.0.0 || ^18.0.0",
+    "react-horizontal-stacked-bar-chart": "^8.15.2",
     "react-markdown": "^9.0.1",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.22.0",
