--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/joy": "^5.0.0-beta.25",
     "@mui/material": "^5.15.7",
+    "firebase": "^10.8.0",
     "html-react-parser": "^5.1.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.3",
